Replace cta_root2caldb.py script by csroot2caldb cscript.
Convert the cta_root2caldb.py script into a cscript and add unit test. The script only works if PyROOT is installed.

Instead of the cta_root2caldb.py script a generate_prod3_irf.py script was added to the example folder.

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ src/ctulimit/ctulimit
 src/cterror/cterror
 test/pfiles/
 test/caldb/
+test/csroot2caldb_*
 test/iactdata_*
 test/*.fits
 test/*.dat
