--- a/configure.ac
+++ b/configure.ac
@@ -33,8 +33,8 @@ AC_INIT([ctools], [1.1.0.dev1], [jurgen.knodlseder@irap.omp.eu], [ctools])
 AC_CONFIG_SRCDIR([src/ctselect/ctselect.cpp])
 AC_CONFIG_MACRO_DIR([m4])
 #AM_INIT_AUTOMAKE([gnu no-dependencies])
-#AM_INIT_AUTOMAKE([gnu -Wno-portability])
-AM_INIT_AUTOMAKE([gnu -Wno-portability serial-tests])
+AM_INIT_AUTOMAKE([gnu -Wno-portability])
+#AM_INIT_AUTOMAKE([gnu -Wno-portability serial-tests])
 AC_CONFIG_HEADER([config.h])
 
 
