Add unit tests for example scripts
So far, all pipeline example scripts are included in the unit test. Results are not yet checked, but it is assured that all scripts execute without any error.

--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,7 @@ test/*.reg
 test/*.trs
 test/*.txt
 test/test_cscripts.sh
+test/test_examples.sh
 test/reports/*.xml
 test/butterfly.txt
 test/.coverage
