Update list of example scripts to install

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -2,8 +2,7 @@
 
 # Scripts to be distributed
 scripts = README.md \
-          benchmark_cta_analysis.py \
-          check_models.py \
+          make_pointings.py \
           make_pull_at_sensitivity_limit.py \
           make_spectrum.py \
           make_survey.py \
@@ -15,10 +14,13 @@ scripts = README.md \
           pipeline_unbinned_disk.py \
           pipeline_unbinned_mem.py \
           show_butterfly.py \
+          show_model.py \
           show_pha.py \
+          show_pull_evolution.py \
           show_pull_histogram.py \
           show_response.py \
           show_sensitivity.py \
+          show_spectrum.py \
           show_ts_distribution.py
 
 # Set directories
