Update Sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -24,7 +24,7 @@ sonar.cxx.missingIncludeWarnings=False
 
 # Exclusions
 sonar.exclusions=pyext/ctools/**,pyext/build/**,pyext/setup.py,doc/**,test/dev/**
-sonar.coverage.exclusions=pyext/ctools/**,pyext/build/**,examples/**,doc/**,install/analysis/**,src/*/*.hpp,test/test_*.py
+sonar.coverage.exclusions=pyext/ctools/**,pyext/build/**,examples/**,doc/**,test/dev/**
 #sonar.test.exclusions=
 
 # C++ configuration
