--- a/.gitignore
+++ b/.gitignore
@@ -83,7 +83,7 @@ test/*.trs
 test/*.txt
 test/*.eps
 test/test_cscripts.sh
-test/test_examples.sh
+test/test_examples.py
 test/reports/*.xml
 test/butterfly.txt
 test/.coverage
