Exclude some files from coverage analysis

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -21,6 +21,7 @@ sonar.cxx.missingIncludeWarnings=False
 
 # Exclusions
 sonar.exclusions=cscripts/tests/**,pyext/build/**,pyext/ctools/*_wrap.cpp,pyext/ctools/tests/**,doc/**,test/dev/**
+sonar.coverage.exclusions=test/science_verification.py,test/test_examples.py
 
 # C++ configuration
 sonar.cxx.cppcheck.reportPath=cppcheck-result.xml
