Integrate show_obs.py example code

--- a/test/test_examples.py.in
+++ b/test/test_examples.py.in
@@ -129,8 +129,6 @@ class Test(gammalib.GPythonTestSuite):
         self._execute_python(script, args='gc', log='make_pointings_gc')
         self._execute_python(script, args='lmc', log='make_pointings_lmc')
 
-        #TODO: Do any testing
-
         # Return
         return
 
@@ -141,8 +139,6 @@ class Test(gammalib.GPythonTestSuite):
         """
         # Execute script
         self._execute_python('generate_prod3_irfs')
-
-        #TODO: Do any testing
 
         # Return
         return
@@ -155,8 +151,6 @@ class Test(gammalib.GPythonTestSuite):
         # Execute script
         self._execute_python('make_spectrum', args='eps')
 
-        #TODO: Do any testing
-
         # Return
         return
 
@@ -167,8 +161,6 @@ class Test(gammalib.GPythonTestSuite):
         """
         # Execute script
         self._execute_python('make_ts_distributions', args='-n 2 -e 0 -d 1800')
-
-        #TODO: Do any testing
 
         # Return
         return
@@ -181,8 +173,6 @@ class Test(gammalib.GPythonTestSuite):
         # Execute script
         self._execute_python('pipeline_binned_disk')
 
-        #TODO: Do any testing
-
         # Return
         return
 
@@ -193,8 +183,6 @@ class Test(gammalib.GPythonTestSuite):
         """
         # Execute script
         self._execute_python('pipeline_binned_mem')
-
-        #TODO: Do any testing
 
         # Return
         return
@@ -207,8 +195,6 @@ class Test(gammalib.GPythonTestSuite):
         # Execute script
         self._execute_python('pipeline_stacked_disk')
 
-        #TODO: Do any testing
-
         # Return
         return
 
@@ -219,8 +205,6 @@ class Test(gammalib.GPythonTestSuite):
         """
         # Execute script
         self._execute_python('pipeline_stacked_mem')
-
-        #TODO: Do any testing
 
         # Return
         return
@@ -233,8 +217,6 @@ class Test(gammalib.GPythonTestSuite):
         # Execute script
         self._execute_python('pipeline_unbinned_disk')
 
-        #TODO: Do any testing
-
         # Return
         return
 
@@ -245,8 +227,6 @@ class Test(gammalib.GPythonTestSuite):
         """
         # Execute script
         self._execute_python('pipeline_unbinned_mem')
-
-        #TODO: Do any testing
 
         # Return
         return
@@ -261,8 +241,6 @@ class Test(gammalib.GPythonTestSuite):
                              args='data/butterfly.txt '
                                   'example_show_butterfly.eps')
 
-        #TODO: Do any testing
-
         # Return
         return
 
@@ -275,8 +253,6 @@ class Test(gammalib.GPythonTestSuite):
         self._execute_python('show_model',
                              args='data/crab.xml Crab example_show_model.eps')
 
-        #TODO: Do any testing
-
         # Return
         return
 
@@ -288,8 +264,6 @@ class Test(gammalib.GPythonTestSuite):
         # Execute script
         self._execute_python('show_pha',
                              args='data/pha.fits example_show_pha.eps')
-
-        #TODO: Do any testing
 
         # Return
         return
@@ -304,8 +278,6 @@ class Test(gammalib.GPythonTestSuite):
                              args='data/pull.dat Pull_Crab_Prefactor '
                                   'example_show_pull_evolution.eps')
 
-        #TODO: Do any testing
-
         # Return
         return
 
@@ -319,8 +291,6 @@ class Test(gammalib.GPythonTestSuite):
                              args='data/pull.dat Pull_Crab_Prefactor 50 '
                                   'example_show_pull_histogram.eps')
 
-        #TODO: Do any testing
-
         # Return
         return
 
@@ -331,8 +301,6 @@ class Test(gammalib.GPythonTestSuite):
         """
         # Execute script
         self._execute_python('show_response', args='example_show_response.eps')
-
-        #TODO: Do any testing
 
         # Return
         return
@@ -347,8 +315,6 @@ class Test(gammalib.GPythonTestSuite):
                              args='data/sensitivity.dat '
                                   'example_show_sensitivity.eps')
 
-        #TODO: Do any testing
-
         # Return
         return
 
@@ -361,8 +327,6 @@ class Test(gammalib.GPythonTestSuite):
         self._execute_python('show_spectrum',
                              args='data/spectrum.fits '
                                   'example_show_spectrum.eps')
-
-        #TODO: Do any testing
 
         # Return
         return
@@ -377,8 +341,6 @@ class Test(gammalib.GPythonTestSuite):
                              args='data/ts.dat -n 100 '
                                   '-f example_show_ts_distribution.eps')
 
-        #TODO: Do any testing
-
         # Return
         return
 
@@ -389,13 +351,11 @@ class Test(gammalib.GPythonTestSuite):
         """
         # Execute script
         self._execute_python('show_obs',
-                             args='obs_selected.xml save')
-
-        #TODO: Do any testing
+                             args='obs_selected.xml example_show_one.jpg')
 
         # Return
         return
-        
+
 
 # ======================== #
 # Main routine entry point #
