--- a/cscripts/__init__.py.in
+++ b/cscripts/__init__.py.in
@@ -40,6 +40,7 @@ __all__ = [
     "cstsdist",
     "cstsmapmerge",
     "csworkflow",
+    "cstssplit",
     "obsutils"
 ]
 if cur_version > req_version:
@@ -65,6 +66,7 @@ from cscripts.csspec       import csspec
 from cscripts.cstsdist     import cstsdist
 from cscripts.cstsmapmerge import cstsmapmerge
 from cscripts.csworkflow   import csworkflow
+from cscripts.cstssplit    import cstssplit
 from cscripts              import obsutils
 if cur_version > req_version:
     from cscripts.csfindobs  import csfindobs
